@@ -43,14 +43,13 @@ import greencity.repository.HabitTranslationRepo;
 import greencity.repository.ToDoListItemTranslationRepo;
 import greencity.repository.HabitAssignRepo;
 import greencity.repository.RatingPointsRepo;
+import java.util.Collection;
 import java.util.Objects;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
-import java.util.NoSuchElementException;
 import java.util.Optional;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 import greencity.repository.CustomToDoListItemRepo;
 import greencity.repository.LanguageRepo;
 import greencity.repository.TagsRepo;
@@ -278,13 +277,13 @@ public class HabitServiceImpl implements HabitService {
                 HabitTranslation habitTranslationByUaLanguage =
                     habitTranslationRepo.getHabitTranslationByUaLanguage(habitTranslation.getHabit().getId());
                 habitDto.getHabitTranslation()
-                    .setDescriptionUk(habitTranslationByUaLanguage.getDescription() != null
+                    .setDescription(habitTranslationByUaLanguage.getDescription() != null
                         ? habitTranslationByUaLanguage.getDescription()
                         : "");
-                habitDto.getHabitTranslation().setNameUk(
+                habitDto.getHabitTranslation().setName(
                     habitTranslationByUaLanguage.getName() != null ? habitTranslationByUaLanguage.getName() : "");
                 habitDto.getHabitTranslation()
-                    .setHabitItemUk(habitTranslationByUaLanguage.getHabitItem() != null
+                    .setHabitItem(habitTranslationByUaLanguage.getHabitItem() != null
                         ? habitTranslationByUaLanguage.getHabitItem()
                         : "");
                 boolean isFavorite = isCurrentUserFollower(habitTranslation.getHabit(), userId);
@@ -393,7 +392,7 @@ public class HabitServiceImpl implements HabitService {
      */
     private CustomHabitDtoResponse buildAddCustomHabitDtoResponse(Habit habit, Long userId) {
         CustomHabitDtoResponse response = modelMapper.map(habit, CustomHabitDtoResponse.class);
-
+        response.setUserId(userId);
         response.setCustomToDoListItemDto(customToDoListResponseDtoMapper
             .mapAllToList(customToDoListItemRepo.findAllByUserIdAndHabitId(userId, habit.getId())));
         response.setTagIds(habit.getTags().stream().map(Tag::getId).collect(Collectors.toSet()));
@@ -495,27 +494,24 @@ public class HabitServiceImpl implements HabitService {
             .findFirst();
         habitTranslationDtoOptional.ifPresent(habitTranslationDto -> habitTranslationRepo.findAllByHabit(habit)
             .forEach(habitTranslation -> {
-                habitTranslation.setName(habitTranslationDto.getNameEn());
-                habitTranslation.setDescription(habitTranslationDto.getDescriptionEn());
-                habitTranslation.setHabitItem(habitTranslationDto.getHabitItemEn());
+                habitTranslation.setName(habitTranslationDto.getName());
+                habitTranslation.setDescription(habitTranslationDto.getDescription());
+                habitTranslation.setHabitItem(habitTranslationDto.getHabitItem());
             }));
     }
 
     private void saveHabitTranslationListsToHabitTranslationRepo(CustomHabitDtoRequest habitDto, Habit habit) {
-        List<HabitTranslation> habitTranslationListForUa =
-            mapHabitTranslationFromAddCustomHabitDtoRequest(habitDto, AppConstant.LANGUAGE_CODE_UA);
-        habitTranslationListForUa.forEach(habitTranslation -> habitTranslation.setHabit(habit));
-        habitTranslationListForUa.forEach(habitTranslation -> habitTranslation.setLanguage(
-            languageRepo.findByCode(AppConstant.LANGUAGE_CODE_UA).orElseThrow(NoSuchElementException::new)));
-
-        List<HabitTranslation> habitTranslationListForEn =
-            mapHabitTranslationFromAddCustomHabitDtoRequest(habitDto, AppConstant.DEFAULT_LANGUAGE_CODE);
-        habitTranslationListForEn.forEach(habitTranslation -> habitTranslation.setHabit(habit));
-        habitTranslationListForEn.forEach(habitTranslation -> habitTranslation.setLanguage(
-            languageRepo.findByCode(AppConstant.DEFAULT_LANGUAGE_CODE).orElseThrow(NoSuchElementException::new)));
-
-        habit.setHabitTranslations(Stream.concat(habitTranslationListForUa.stream(), habitTranslationListForEn.stream())
-            .collect(Collectors.toList()));
+        List<HabitTranslation> habitTranslations = habitDto
+            .getHabitTranslations().stream()
+            .filter(dto -> {
+                if (!AppConstant.supportedLanguages.contains(dto.getLanguageCode())) {
+                    throw new NotFoundException(ErrorMessage.INVALID_LANGUAGE_CODE);
+                }
+                return true;
+            })
+            .map(dto -> mapHabitTranslationFromAddCustomHabitDtoRequest(habitDto, dto.getLanguageCode()))
+            .flatMap(Collection::stream).toList();
+        habit.setHabitTranslations(habitTranslations);
     }
 
     private List<HabitTranslation> mapHabitTranslationFromAddCustomHabitDtoRequest(CustomHabitDtoRequest habitDto,
